--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <h1>To-Do List</h1>
         <input type="text" id="taskInput" placeholder="Enter a new task...">
-        <button>Add Task</button>
+        <button onclick="addTask()">Add Task</button>
         <ul id="taskList"> </ul>
     </div>
 
